--- a/Web_Application_Technologies_and_Django/Assignments/Week_4/Cascading_Style_Sheets/site/css/blocks.css
+++ b/Web_Application_Technologies_and_Django/Assignments/Week_4/Cascading_Style_Sheets/site/css/blocks.css
@@ -1,4 +1,3 @@
-
 /* This is a partial blocks.css, you need to add more rules
    to this file to complete the assignment.  Do not add any CSS
    styling to the original index.htm / start.htm */
@@ -48,10 +47,8 @@ body {
     left: 5px;
 }
 
-#link :link {
+#link :any-link {
     position: relative;
-    align-self: center;
-    text-align: center;
     left: 50%;
     margin-left: -1em;
     background-color: #0a4b33;
